glide (2002.04.10-19) UNRELEASED; urgency=low

  * Demote glide2-bin from Recommends to Suggests in libglide2.
    (Closes: #504647)
  * Switch to debhelper compatibility level 7.
  * Use dh_prep instead of “dh_clean -k”.
  * Fix typo (llibglide → libglide) in libglide2-dev Conflicts field.

 -- Guillem Jover <guillem@debian.org>  Mon, 09 Feb 2009 21:57:55 +0200

glide (2002.04.10-18) unstable; urgency=low

  * Pass LD_LIBRARY_PATH directly to dh_shlibdeps, because it forces the -l
    argument to be an absolute path breaking the build. (Closes: #501426)

 -- Guillem Jover <guillem@debian.org>  Wed, 08 Oct 2008 05:03:49 +0300

glide (2002.04.10-17) unstable; urgency=low

  * Update packaging Vcs fields to the new URL.
  * Remove packaging svn information from debian/copyright.
  * Refer to LGPL-2 from common-licenses instead of just LGPL.
  * Debconf template translations:
    - Add Basque. (Closes: #494804)
      Thanks to Piarres Beobide <pi+debian@beobide.net>.
    - Add Finnish. (Closes: #495253)
      Thanks to Esko Arajärvi <edu@iki.fi>.
    - Add Italian. (Closes: #494562)
      Thanks to Luca Monducci <luca.mo@tiscali.it>.
    - Add Japanese. (Closes: #495161)
      Thanks to Hideki Yamane <henrich@debian.or.jp>.
    - Add Russian. (Closes: #494465)
      Thanks to Yuri Kozlov <kozlov.y@gmail.com>.
    - Add Swedish. (Closes: #484006)
      Thanks to Martin Bagge <brother@bsnet.se>.
  * Update debconf .po files.

 -- Guillem Jover <guillem@debian.org>  Tue, 07 Oct 2008 00:49:42 +0300

glide (2002.04.10-16) unstable; urgency=low

  * Pass the proper -l argument to dh_shlibdeps for glide2-bin, from the
    build dir instead of the installed dir, as there's no symlink pointing
    to the hardware specific library there. (Closes: #456875)
    Based on a patch by Anibal Avelar <aavelar@cofradia.org>.

 -- Guillem Jover <guillem@debian.org>  Fri, 25 Jan 2008 00:11:58 +0200

glide (2002.04.10-15) unstable; urgency=low

  * Debconf template translations: