@@ -5,6 +5,7 @@ glide (2002.04.10-19) UNRELEASED; urgency=low
   * Switch to debhelper compatibility level 7.
   * Use dh_prep instead of “dh_clean -k”.
   * Fix typo (llibglide → libglide) in libglide2-dev Conflicts field.
+  * Refactor glide3 build code into a make define and use it for h3 and h5.
 
  -- Guillem Jover <guillem@debian.org>  Mon, 09 Feb 2009 21:57:55 +0200
 
